# MLOps_RecruitAIr_JobCriteriaExtractor

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  data.dvc  dvc.yaml  prometheus.yml  pyproject.toml
.dvc/: config
.github/workflows/: build-on-tag.yaml  linting.yml  typing.yml
MLOps_RecruitAIr/: __init__.py  features.py  plots.py
MLOps_RecruitAIr/modeling/: train.py
docs/: requirements.md
grafana/: dashboard.yaml
grafana/dashboards/: recruitair-api.json
grafana/provisioning/dashboards/: dashboard.yaml
graphana_dashboards/: recruitair-api.json
mlruns/0/: meta.yaml
notebooks/: create_prompt_version.ipynb  evaluate_prompt_version.ipynb  job_offer_criteria_extraction.ipynb  promote_prompt.ipynb
recruitair/: __init__.py  config.py  dataset.py  features.py  plots.py
recruitair/api/: config.py  dependencies.py  main.py  model.py  monitoring.py  schemas.py
recruitair/config/: __init__.py  config_base.py  data_download_config.py  data_preprocess_config.py  data_split_config.py
recruitair/data/: __init__.py  download_raw_dataset.py  preprocess_json.py  split_data.py  test_preprocess_json.py  validate_data.py
recruitair/job_offers/: __init__.py  extract_criteria.py
recruitair/job_offers/models/: __init__.py  criteria.py
recruitair/job_offers/prompts/: extract_criteria.txt
recruitair/modeling/: __init__.py  predict.py  train.py
references/: application-requirements.md  criteria-extraction-requirements.md  system-requirements.md
reports/: dataset_card_jobs.md  dataset_card_recruitment.md  dataset_card_resume-score-details.md  model_card.md
tests/: test_api.py  test_download_raw_dataset.py  test_preprocess_json.py
