[project]
name = "MLOps_RecruitAIr"
version = "0.0.1"
description = "MLOps group project for good company practices in ML"
authors = [
  { name = "RecruitAIr" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "black",
    "dagshub>=0.6.3",
    "dvc>=3.63.0",
    "flake8",
    "huggingface-hub>=0.35.0",
    "ipykernel>=6.30.1",
    "isort",
    "kagglehub>=0.3.13",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.8",
    "loguru",
    "mlflow[gateway]>=3.4.0",
    "numpy>=2.3.3",
    "openai>=2.1.0",
    "pandas>=2.3.2",
    "pip",
    "pydantic>=2.11.9",
    "python-dotenv",
    "tqdm",
    "typer",
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["temp"]
force_sort_within_sections = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pylint>=3.3.8",
    "pytest>=8.4.2",
]

