[project]
name = "MLOps_RecruitAIr"
version = "0.0.1"
description = "MLOps group project for good company practices in ML"
authors = [
  { name = "RecruitAIr" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
dependencies = [
    "huggingface-hub~=0.35.0",
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.8",
    "mlflow>=3.4.0",
    "numpy>=2.3.3",
    "pydantic>=2.11.9",
    "pydantic-settings>=2.12.0",
    "prometheus-client>=0.20.0",
    "uvicorn>=0.38.0",
]
requires-python = "~=3.12.0"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.isort]
profile = "black"
known_first_party = ["temp"]
force_sort_within_sections = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "codecarbon>=3.2.0",
    "dvc>=3.64.1",
    "ipykernel>=7.1.0",
    "kagglehub>=0.3.13",
    "pandas>=2.3.3",
    "pylint>=3.3.8",
    "pynblint>=0.1.6",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "types-requests>=2.32.4.20250913",
    "types-tqdm>=4.67.0.20250809",
]

[[tool.mypy.overrides]]
module = ["sklearn.*", "kagglehub"]
follow_untyped_imports = true
